--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 	<meta property="og:site_name" content="La chouette agence" />
 	<meta property="og:local" content="fr_FR" />
 
+	<!-- Twitter Card -->
+
+	 <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="La chouette agence, entreprise de webdesign à Lyon" />
+    <meta name="twitter:description" content="La chouette agence est une entreprise de Webdesign, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
+    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo.png" />
+    <meta name="twitter:url" content="https://annesoflouret.github.io/projet-4" />
+
     
 <!-- Analytics -->
  
