update img open graph

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<meta property="og:title" content="La chouette agence, entreprise de webdesign à Lyon" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://annesoflouret.github.io/projet-4/index.html" />
-	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/la-chouette-agence.png" />
+	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-og.png" />
 	<meta property="og:description"
 		content="La chouette agence est une entreprise de Webdesign, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
 	<meta property="og:site_name" content="La chouette agence" />
