add css font-style and flexbox

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <!--<meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">-->
+    <meta name="keywords" content="agence web design Lyon">
     <meta name="description" content="La chouette agence entreprise de webdesign à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -31,7 +31,7 @@
 	<meta property="og:url" content="https://annesoflouret.github.io/projet-4/index.html" />
 	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-og.png" />
 	<meta property="og:description"
-		content="La chouette agence est une entreprise de Webdesign, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
+		content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
 	<meta property="og:site_name" content="La chouette agence" />
 	<meta property="og:local" content="fr_FR" />
 
@@ -39,7 +39,7 @@
 
 	<meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="La chouette agence, entreprise de webdesign à Lyon" />
-    <meta name="twitter:description" content="La chouette agence est une entreprise de Webdesign, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
+    <meta name="twitter:description" content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
     <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo/tc.png" />
     <meta name="twitter:url" content="https://annesoflouret.github.io/projet-4" />
 
