--- a/contact.html
+++ b/contact.html
@@ -52,14 +52,14 @@
 			</div>
 			<!-- bloc-0 END -->
 			<!-- bloc-6 -->
-			<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" id="bloc-6">
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
 							<h1 class="text-center hero-bloc-text tc-white">
 								Parlons web design !
 							</h1>
-							<p class="text-center mg-lg tc-white tight-width-whitespace">
+							<p class="text-center mg-lg white tight-width-whitespace">
 								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 							</p>
