--- a/contact.html
+++ b/contact.html
@@ -80,30 +80,29 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6">
-							<!--success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
-							<form id="form_1" novalidate>
+							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 								<div class="form-group">
 									<label for="name">
 										Nom
 									</label>
-									<input id="name" class="form-control" required />
+									<input id="name" class="form-control" required placeholder="Nom" />
 								</div>
 								<div class="form-group">
 									<label for="email">
 										Adresse email
 									</label>
-									<input id="email" class="form-control" type="email" required />
+									<input id="email" class="form-control" type="email" required placeholder="Email" />
 								</div>
 								<div class="form-group">
 									<label for="input_504">
 										Comment nous avez-vous connu ?
 									</label>
-									<input class="form-control" type="email" required id="input_504" />
+									<input class="form-control" type="form-control" required id="input_504" placeholder="information requise" />
 								</div>
 								<div class="form-group">
 									<label for="message">
 										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-									</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+									</label><textarea id="message" class="form-control" rows="4" cols="50" required placeholder="Message requis"></textarea>
 								</div> 
 								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 									Envoyer
@@ -154,6 +153,19 @@
 								<div class="text-center">
 									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
+							</div>
+						</div>
+						<div class="row white text-center" id="footer-partners">
+						<div class="col-sm-offset-4 col-sm-4">
+							<span id="footer-partners-title">	
+								Partenaires
+							</span>
+								<ul class="list-unstyled">
+									<li><a href="voiture.com" target="_blank">voiture.com</a></li>
+									<li><a href="pizza.com" target="_blank">pizza.com</a></li>
+									<li><a href="matoiture.com" target="_blank">matoiture.com</a></li>
+									<li><a href="immobilierseo.com"target="_blank">immobilierseo.com</a></li>
+								</ul>		
 							</div>
 						</div>
 					</div>
