--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="agence webdesign Lyon">
     <meta name="description" content="La chouette agence entreprise de webdesign à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -18,7 +18,29 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
+    
     <title>Contact</title>
+
+    <!-- SEO -  Open Graph + Twitter Card -->
+
+	<!-- Open Graph data -->
+
+	<meta property="og:title" content="La chouette agence, entreprise de webdesign à Lyon" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://annesoflouret.github.io/projet-4/index.html" />
+	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
+	<meta property="og:description"
+		content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
+	<meta property="og:site_name" content="La chouette agence" />
+	<meta property="og:local" content="fr_FR" />
+
+	<!-- Twitter Card -->
+
+	<meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="La chouette agence, entreprise de webdesign à Lyon" />
+    <meta name="twitter:description" content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
+    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
+    <meta name="twitter:url" content="https://annesoflouret.github.io/projet-4" />
 
     
 <!-- Analytics -->
@@ -35,7 +57,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence-logo" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
