--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="agence webdesign Lyon">
     <meta name="description" content="La chouette agence entreprise de webdesign à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -29,7 +29,7 @@
 	<meta property="og:title" content="La chouette agence, entreprise de webdesign à Lyon" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://annesoflouret.github.io/projet-4/index.html" />
-	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-og.png" />
+	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
 	<meta property="og:description"
 		content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
 	<meta property="og:site_name" content="La chouette agence" />
@@ -40,7 +40,7 @@
 	<meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="La chouette agence, entreprise de webdesign à Lyon" />
     <meta name="twitter:description" content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
-    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo/tc.png" />
+    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
     <meta name="twitter:url" content="https://annesoflouret.github.io/projet-4" />
 
     
@@ -58,7 +58,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence - entreprise de web design à lyon" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence-logo" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
@@ -117,7 +117,7 @@
 								Web design
 							</h3>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -125,7 +125,7 @@
 								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
 							<h3 class="mg-md text-center">
-								&nbsp;Stratégie
+								Stratégie
 							</h3>
 							<p class="text-center ">
 								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -207,7 +207,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<figure class="col-sm-6">
-							<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Matériel de photographie pour un site de voyage"/></a>
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Matériel de photographie pour un site de voyage"/></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -216,7 +216,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-sm-6">
-							<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Organisation d'un mariage pour un site web d'une agence matrimoniale" /></a>
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Organisation d'un mariage pour un site web d'une agence matrimoniale" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
