--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+
+	<link rel="canonical" href="https://annesoflouret.github.io/projet-4/" />
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
