--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence-logo" height="40" /></a>
+							<a class="navbar-brand" aria-label="aller a la page d'accueil" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence-logo" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
@@ -67,10 +67,10 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a href="index.html">Accueil</a>
+									<a href="index.html" aria-label="aller a la page d'accueil">Accueil</a>
 								</li>
 								<li>
-									<a href="contact.html">Contact</a>
+									<a href="contact.html" aria-label="aller a la page contact">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -143,7 +143,7 @@
 		</main>
 		
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+		<a class="bloc-button btn btn-d scrollToTop" aria-label="valider le formulaire" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 
 
@@ -158,22 +158,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" aria-label="lien twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" aria-label="lien facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" aria-label="lien dribbble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" aria-label="lien instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
@@ -183,10 +183,10 @@
 								Partenaires
 							</span>
 								<ul class="list-unstyled">
-									<li><a href="voiture.com" target="_blank">voiture.com</a></li>
-									<li><a href="pizza.com" target="_blank">pizza.com</a></li>
-									<li><a href="matoiture.com" target="_blank">matoiture.com</a></li>
-									<li><a href="immobilierseo.com"target="_blank">immobilierseo.com</a></li>
+									<li><a href="voiture.com" aria-label="lien parteanire voiture.com" target="_blank">voiture.com</a></li>
+									<li><a href="pizza.com" aria-label="lien parteanire pizza.com" target="_blank">pizza.com</a></li>
+									<li><a href="matoiture.com" aria-label="lien parteanire matoiture.com" target="_blank">matoiture.com</a></li>
+									<li><a href="immobilierseo.com" aria-label="lien parteanire immobilierseo.com" target="_blank">immobilierseo.com</a></li>
 								</ul>		
 							</div>
 						</div>
