--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence-logo" height="40" /></a>
+							<a class="navbar-brand" aria-label="aller a la page d'accueil" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence-logo" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
@@ -70,10 +70,10 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a href="index.html">Accueil</a>
+									<a href="index.html" aria-label="aller a la page d'accueil">Accueil</a>
 								</li>
 								<li>
-									<a href="contact.html">Contact</a>
+									<a href="contact.html" aria-label="aller a la page contact">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -92,7 +92,7 @@
 								La chouette agence.
 							</h1>
 							<div class="text-center">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+								<a href="contact.html" aria-label="aller a la page contact" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</section>
 					</div>
@@ -168,7 +168,7 @@
 								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 							</h2>
 							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" aria-label="aller a la page contact" href="contact.html">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<figure class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg"class="img-responsive portfolio-thumb" alt="Pages de journaux pour la refonte d'un journal local" /></a>
+							<a href="#" aria-label="agrandir l'image 1" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg"class="img-responsive portfolio-thumb" alt="Pages de journaux pour la refonte d'un journal local" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -198,7 +198,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Photographe en action pour un site web de photographie" /></a>
+							<a href="#" aria-label="agrandir l'image 2" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Photographe en action pour un site web de photographie" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -209,7 +209,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<figure class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Matériel de photographie pour un site de voyage"/></a>
+							<a href="#" aria-label="agrandir l'image 3" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Matériel de photographie pour un site de voyage"/></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -218,7 +218,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Organisation d'un mariage pour un site web d'une agence matrimoniale" /></a>
+							<a href="#" aria-label="agrandir l'image 4" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Organisation d'un mariage pour un site web d'une agence matrimoniale" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -239,7 +239,7 @@
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
-							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							<a href="contact.html" aria-label="aller a la page contact" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -258,22 +258,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" aria-label="lien twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" aria-label="lien facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" aria-label="lien dribbble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" aria-label="lien instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
@@ -283,10 +283,10 @@
 									Partenaires
 								</span>
 								<ul class="list-unstyled">
-									<li><a href="voiture.com" target="_blank">voiture.com</a></li>
-									<li><a href="pizza.com" target="_blank">pizza.com</a></li>
-									<li><a href="matoiture.com" target="_blank">matoiture.com</a></li>
-									<li><a href="immobilierseo.com"target="_blank">immobilierseo.com</a></li>
+									<li><a href="voiture.com" aria-label="lien parteanire voiture.com" target="_blank">voiture.com</a></li>
+									<li><a href="pizza.com" aria-label="lien parteanire pizza.com" target="_blank">pizza.com</a></li>
+									<li><a href="matoiture.com" aria-label="lien parteanire matoiture.com" target="_blank">matoiture.com</a></li>
+									<li><a href="immobilierseo.com" aria-label="lien parteanire immobilierseo.com" target="_blank">immobilierseo.com</a></li>
 								</ul>		
 							</div>
 						</div>
