--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
 										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 									</label><textarea id="message" class="form-control" rows="4" cols="50" required placeholder="Message requis"></textarea>
 								</div> 
-								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="valider le formulaire">
 									Envoyer
 								</button>
 							</form>
@@ -143,7 +143,7 @@
 		</main>
 		
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" aria-label="valider le formulaire" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+		<a class="bloc-button btn btn-d scrollToTop" aria-label="retour en haut de la page" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 
 
