--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand" aria-label="aller a la page d'accueil" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence-logo" height="40" /></a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+							<button id="nav-toggle" aria-label="menu deroulant" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
