add hr partenaire contact page

--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@
 						<div class="row white text-center" id="footer-partners">
 						<div class="col-sm-offset-4 col-sm-4">
 							<span id="footer-partners-title">	
-								Partenaires
+								Partenaires <hr>
 							</span>
 								<ul class="list-unstyled">
 									<li><a href="voiture.com" aria-label="lien parteanire voiture.com" target="_blank">voiture.com</a></li>
