--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="agence webdesign Lyon">
-    <meta name="description" content="La chouette agence entreprise de webdesign à Lyon">
+    <meta name="description" content="La chouette agence entreprise de webdesign à Lyon. Agence de webdesign pour une meilleure visibilité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -19,7 +19,7 @@
 	<script src="./js/jqBootstrapValidation.min.js"></script>
 	<script src="./js/formHandler.min.js"></script>
     
-    <title>Contact</title>
+    <title>Contactez la chouette agence</title>
 
     <!-- SEO -  Open Graph + Twitter Card -->
 
