--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="agence webdesign Lyon">
-    <meta name="description" content="La chouette agence entreprise de webdesign à Lyon">
+    <meta name="description" content="La chouette agence entreprise de webdesign à Lyon. Agence de webdesign pour une meilleure visibilité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
 
 	<link rel="canonical" href="https://annesoflouret.github.io/projet-4/" />
 	
