change margin link footeer

--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
 									Partenaires <hr>
 								</span>
 								<ul class="list-unstyled">
-									<li><a href="voiture.com" aria-label="lien parteanire voiture.com" target="_blank">voiture.com</a></li>
-									<li><a href="pizza.com" aria-label="lien parteanire pizza.com" target="_blank">pizza.com</a></li>
-									<li><a href="matoiture.com" aria-label="lien parteanire matoiture.com" target="_blank">matoiture.com</a></li>
-									<li><a href="immobilierseo.com" aria-label="lien parteanire immobilierseo.com" target="_blank">immobilierseo.com</a></li>
+									<li class="space-link-footer"><a href="voiture.com" aria-label="lien parteanire voiture.com" target="_blank">voiture.com</a></li>
+									<li class="space-link-footer"><a href="pizza.com" aria-label="lien parteanire pizza.com" target="_blank">pizza.com</a></li>
+									<li class="space-link-footer"><a href="matoiture.com" aria-label="lien parteanire matoiture.com" target="_blank">matoiture.com</a></li>
+									<li class="space-link-footer"><a href="immobilierseo.com" aria-label="lien parteanire immobilierseo.com" target="_blank">immobilierseo.com</a></li>
 								</ul>		
 							</div>
 						</div>
