--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 									<label for="input_504">
 										Comment nous avez-vous connu ?
 									</label>
-									<input class="form-control" type="form-control"  id="input_504" required placeholder="information requise" />
+									<input class="form-control" type="email"  id="input_504" required placeholder="information requise" />
 								</div>
 								<div class="form-group">
 									<label for="message">
